--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,24 @@
   font-family: "Roboto", sans-serif;
 }
 
-ul li {
-  list-style: none;
+header {
+  background-color: #f0544f;
+  overflow: hidden;
 }
 
 a {
   color: initial;
   text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+}
+
+nav a {
+  float: right;
+  color: white;
+  padding: 8px;
+  font-weight: 900;
+  text-transform: uppercase;
 }
