--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
   font-family: "Roboto", sans-serif;
 }
 
+h1,
+h2 {
+  margin: 16px 0;
+}
+
 header {
   background-color: #f0544f;
   overflow: hidden;
@@ -26,4 +31,34 @@ nav a {
   padding: 8px;
   font-weight: 900;
   text-transform: uppercase;
+}
+
+.splash {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.splash img {
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+}
+
+.splash h1 {
+  color: #f0544f;
+  font-size: 64px;
+}
+
+.splash h2 {
+  font-size: 40px;
+  font-weight: 300;
+}
+
+#splash-text {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
