--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,14 @@ ul li {
   list-style: none;
 }
 
-nav a {
+nav {
   float: right;
-  color: white;
   padding: 8px;
+}
+
+nav a {
+  color: white;
+  margin-right: 8px;
   font-weight: 900;
   text-transform: uppercase;
 }
