--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,13 @@
 }
 
 h1,
-h2 {
+h2,
+p {
   margin: 16px 0;
+}
+
+p {
+  text-align: justify;
 }
 
 header {
@@ -27,12 +32,12 @@ ul li {
 
 nav {
   float: right;
-  padding: 8px;
+  padding: 8px 0;
 }
 
 nav a {
   color: white;
-  margin-right: 8px;
+  margin-left: 8px;
   font-weight: 900;
   text-transform: uppercase;
 }
@@ -57,6 +62,27 @@ nav a {
 .splash h2 {
   font-size: 40px;
   font-weight: 300;
+}
+
+.splash a {
+  color: #d81e5b;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+
+.content {
+  width: 66%;
+  margin: 0 auto;
+}
+
+.content h1 {
+  color: #d81e5b;
+}
+
+.link {
+  font-weight: 900;
+  color: #d81e5b;
+  text-transform: uppercase;
 }
 
 #splash-text {
